--- a/metadata.yaml
+++ b/metadata.yaml
@@ -23,5 +23,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Blake, William, 1757-1827'
 - !lcc 'ND'
+- GITenberg
 title: 'William Blake: A Study of His Life and Art Work'
 url: http://www.gutenberg.org/ebooks/37407
